2013-10-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid including hostfile.h when not necessarry as it pulls
	in OS-specific headers which may redefine generic names
	like "far".

2013-10-09  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: New options for scrollbar padding:
	scrollbar_left_pad, scrollbar_right_pad, scrollbar_top_pad,
	scrollbar_bottom_pad
	* docs/grub.texi: Likewise.

2013-10-09  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c (list_destroy): Fixed memory leak.

2013-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Move OS-dependent file definitions to include/grub/osdep/hostfile*.h.

2013-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/emu/hostdisk.h (grub_hostdisk_linux_find_partition):
	Removed.
	* grub-core/osdep/linux/hostdisk.c (grub_hostdisk_linux_find_partition):
	Made static.

2013-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/emu/getroot.h (grub_util_find_hurd_root_device): Remove
	leftover.

2013-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Move OS-specific driver configuration to grub_util_fd_open. This
	moves OS-dependent parts from kern/emu/hostdisk.c to
	grub-core/osdep/*/hostdisk.c.

2013-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Use size_t instead of
	grub_size_t.
	* util/grub-mkimagexx.c (locate_sections): Likewise.
	(load_image): Likewise.

2013-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/misc.c (grub_util_write_image_at): Don't use PRIxGRUB_SIZE for
	size_t.
	(grub_util_write_image): Likewise.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/basic/random.c: New file. Abort on an attempt to
	get random when no RNG is available.
	* grub-core/osdep/random.c: Use basic/random.c on OS out of whitelist.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/util/lvm.h: Removed.
