@@ -1,5 +1,11 @@
 2013-10-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/osdep/aros/getroot.c: Change to //: prefix as discussed
+	with AROS devs.
+	* grub-core/osdep/aros/hostdisk.c: Likewise.
+
+2013-10-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Avoid including hostfile.h when not necessarry as it pulls
 	in OS-specific headers which may redefine generic names
 	like "far".
